lanecwe-Prod/src/objects/ContractDocument_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Document_Sign_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to check whether automatic date should be entered in the document or not.</description>
        <label>Document Sign Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Name__c</fullName>
        <description>Name of the PGI employee, who signs the documents</description>
        <label>Print Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signaure_Image__c</fullName>
        <description>Signature of the PGI employee</description>
        <label>Signaure Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Title of the employee, who signs the contract document.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Document Settings</label>
</CustomObject>